Set font-display to ensure text is visible

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -14,6 +14,7 @@
     url(../fonts/roboto-regular.woff) format("woff");
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -22,6 +23,7 @@
     url(../fonts/roboto-medium.woff) format("woff");
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -30,12 +32,12 @@
     url(../fonts/roboto-bold.woff) format("woff");
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 body {
   font-family: "Roboto", system-ui, "Segoe UI", Roboto, Helvetica, Arial,
     sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-display: swap;
 }
 
 img {
